# CppTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CodeCoverage.cmake  CompilerOptions.cmake  FindSSE.cmake
docs/: CMakeLists.txt  mainpage.md
examples/maps/: map.xml  map_100x100.xml
include/: KarafyllidisModel.h  RectangularMap2D.h  TimeManager.h  Utilities.h
src/: KarafyllidisModel.cpp  RectangularMap2D.cpp  TimeManager.cpp  Utilities.cpp  lib.cpp
standalone/: CMakeLists.txt  main.cpp
test/analysis/: CMakeLists.txt
test/codecov/: CMakeLists.txt
test/gtest/: CMakeLists.txt
test/gtest/include/: gtest_cout.h  pch.cpp
test/gtest/test_template/: test.cpp
